--- a/src/app/sistema/vendas/pedidos-vendas/criar-pedido-vendas/criar-pedido-vendas.component.html
+++ b/src/app/sistema/vendas/pedidos-vendas/criar-pedido-vendas/criar-pedido-vendas.component.html
@@ -354,11 +354,11 @@
                 <th scope="row">{{ oneItem.value.codigo }}</th>
                 <td>{{ oneItem.value.produto }}</td>
                 <td>
-                  <input class="form-control form-control-sm" type="number" placeholder="quantidade" id="quantidade"  formControlName="quantidade" (keyup)="totalQuanti(this.item.value)">
+                  <input class="form-control form-control-sm" type="number" placeholder="quantidade" id="quantidade"  formControlName="quantidade" (keyup)="totalQuanti(this.item.value)" (keyup)="totalProduto(oneItem.value)">
                 </td>
                 <td>{{ oneItem.value.valorUnitario | currency:'BRL'}}</td>
                 <td>
-                  <input currencyMask placeholder="R$" class="form-control form-control-sm" type="text" id="desconto" formControlName="desconto" (keyup)="changeDesconto(this.item.value)" (keyup)="cleanDesconto()" autocomplete="off">
+                  <input currencyMask placeholder="R$" class="form-control form-control-sm" type="text" id="desconto" formControlName="desconto" (keyup)="changeDesconto(this.item.value)" (keyup)="cleanDesconto()" (keyup)="totalProduto(oneItem.value)" autocomplete="off">
                 </td>
                 <td>{{ oneItem.value.valorVenda | currency:'BRL' }}</td>
                 <td>
@@ -373,22 +373,22 @@
                   <input class="form-control form-control-sm" type="date" id="prevRetirada" formControlName="prevRetirada">
                 </td>
                 <!-- Tipo de entrega -->
-                <td>
+                <td class="row">
                   <select #tipoEntrega class="col form-select form-select-sm" id="endereco" formControlName="tipoEntrega">
                     <option value="" disabled selected>Selecionar...</option>
                     <option value="entrega">entrega</option>
                     <option value="retirada">retirada</option>
                   </select>
-                  <input *ngIf="tipoEntrega.value=='retirada'" class="form-control form-control-sm" type="text" id="enderecoLoja" formControlName="enderecoLoja" placeholder="Endereco da loja">
                 </td>
                 <td>
-                    <select *ngIf="tipoEntrega.value=='entrega'" class="col form-select form-select-sm" id="endereco" formControlName="endereco">
+                  <input *ngIf="tipoEntrega.value=='retirada'" class="form-control form-control-sm" type="text" id="enderecoLoja" formControlName="enderecoLoja" placeholder="Endereco da loja">
+                  <select *ngIf="tipoEntrega.value=='entrega'" class="col form-select form-select-sm" id="endereco" formControlName="endereco">
                     <option value="" disabled selected>Selecionar...</option>
                     <option *ngFor="let endereco of enderecos" value="{{endereco.street}} {{endereco.number}} {{endereco.neighborhood}}, {{endereco.state}}">{{endereco.street}} {{endereco.number}} {{endereco.neighborhood}}, {{endereco.state}}</option>
                   </select>
                 </td>
                 <td>
-                  <input currencyMask class="form-control form-control-sm" type="text" placeholder="R$" id="valorFrete" formControlName="valorFrete" (keyup)="changeFrete(this.item.value)">
+                  <input currencyMask class="form-control form-control-sm" type="text" placeholder="R$" id="valorFrete" formControlName="valorFrete" (keyup)="setThisFrete(oneItem.value, $event)" (keyup)="totalProduto(oneItem.value)">
                 </td>
               </tr>
             </tbody>
@@ -429,7 +429,7 @@
   
             <!-- Valor do frete -->
             <div class="col px-2 pt-4 p-0 m-0 form-floating">
-              <input currencyMask class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Valor do frete" [value]="changeFrete(item.value) | currency:'BRL'" readonly>
+              <input currencyMask class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Valor do frete" [value]="oneItem.value.valorFrete | currency:'BRL'" readonly>
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Valor do frete</label>
             </div>
           </div>
@@ -472,19 +472,19 @@
                 <p>{{ totalQuanti(item.value) }}</p>
               </div>
               <div class="col-2 text-center">
-                <p>{{ totalQuanti(item.value)*valUnit | currency:'BRL' }}</p>
+                <p>{{ valUnit | currency:'BRL' }}</p>
               </div>
               <div class="col-2 text-center">
                 <p>{{ descontoG==null? (changeDesconto(item.value) | currency:'BRL' ): (descontoG | currency:'BRL') }}</p>
               </div>
               <div class="col-2 text-center">
-                <p>{{ (totalQuanti(item.value)*valUnit) - changeDesconto(item.value) | currency:'BRL' }}</p>
+                <p>{{ valVenda | currency:'BRL' }}</p>
               </div>
               <div class="col-2 text-center">
                 <p>{{ changeFrete(item.value) | currency:'BRL' }}</p>
               </div>
               <div class="col text-center">
-                <p>{{ (((totalQuanti(item.value)*valUnit) - changeDesconto(item.value)) + changeFrete(item.value)) | currency:'BRL' }}</p>
+                <p>{{ totalValue(item.value) | currency:'BRL' }}</p>
               </div>
             </div>
 
