--- a/src/app/sistema/estoque/estoque-produtos/detalhes-produto/detalhes-produto.component.html
+++ b/src/app/sistema/estoque/estoque-produtos/detalhes-produto/detalhes-produto.component.html
@@ -90,7 +90,7 @@
                 justify-content-between
                 shadow-sm
               ">
-                            <span class="fw-bold my-auto text-truncate text-custom-dark">Estoque disponível no fim</span
+                            <span class="fw-bold my-auto text-truncate text-custom-dark">Total em Estoque</span
               >
               <span
                 font="montserrat"
@@ -105,7 +105,7 @@
         <!-- Export -->
         <div class="row m-0 justify-content-end">
           <!-- Botão Exportar -->
-          <div class="col-2 px-1 mt-2 p-0 m-0 d-grid">
+          <div class="col-1 px-0 mt-1 p-0 m-1 d-grid">
             <button
               type="button"
               class="
@@ -113,8 +113,8 @@
                 h-limited
                 btn
                 rounded-15
-                py-0
-                px-2
+                py-2
+                px-4
                 bg-light
                 d-flex
                 justify-content-center
@@ -138,7 +138,7 @@
           </div>
 
           <!-- Export -->
-          <div class="col-2 px-1 mt-2 p-0 m-0 d-grid">
+          <div class="col-1 px-0 mt-1 p-0 m-1 d-grid">
             <button
               type="button"
               class="
@@ -146,8 +146,8 @@
                 h-limited
                 btn
                 rounded-15
-                py-0
-                px-2
+                py-2
+                px-4
                 bg-custom-success
                 d-flex
                 justify-content-center
